# Riddle-Language

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_en.md  RiddleLexer.g4  RiddleParser.g4  go.mod  go.sum  mypy.ini
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  main.yml
docs/: Class.md  compile.md  package.md  variable.md
parser/: RiddleLexer.cpp  RiddleLexer.h  RiddleLexer.interp  RiddleLexer.tokens  RiddleParser.cpp  RiddleParser.h  RiddleParser.interp  RiddleParser.tokens  RiddleParserBaseListener.cpp  RiddleParserBaseListener.h  RiddleParserBaseVisitor.cpp  RiddleParserBaseVisitor.h  RiddleParserListener.cpp  RiddleParserListener.h  RiddleParserVisitor.cpp  RiddleParserVisitor.h
src/: GenVisitor.cpp  GenVisitor.h  RiddleVisitor.cpp  RiddleVisitor.h  Setup.cpp  Setup.h  __main__.py  main.cpp  main.go  main.py  tools.h
src/Context/: BaseExprAST.h
src/I18n/: BaseLang.cpp  BaseLang.ixx  ChineseLang.ixx  EnglishLang.ixx
src/IR/: Builder.cpp  Builder.ixx  Context.cpp  Context.ixx  ParserStmt.ixx  TypeParser.ixx  statement.go
src/Managers/: ClassManger.ixx  ErrorManager.ixx  FuncManager.ixx  OpManager.ixx  StmtManager.ixx  VarManager.cpp  VarManager.ixx
src/Tools/: BuildQueue.cpp  BuildQueue.h  Files.cpp  Files.h  Files.ixx  GenTools.cpp  GenTools.h  Linker.cpp  Linker.h  Options.ixx  Setup.cpp  Setup.h  VarManager.cpp  VarManager.h  llvmTools.h
src/Tools/Managers/: ClassManager.cpp  ClassManager.h  ClassManger.ixx  StmtManager.ixx  VarManager.cpp  VarManager.h  VarManager.ixx
src/Types/: Class.cpp  Class.h  Class.ixx  ClassNode.cpp  ClassNode.h  ClassNode.ixx  DefineArg.ixx  MetaType.cpp  MetaType.h  Statements.ixx  SuperType.cpp  SuperType.h  UnionFind.ixx  Unit.cpp  Unit.h  Unit.ixx  Variable.h  Variable.ixx
src/Visitors/: FileVisitor.cpp  FileVisitor.h  GenVisitor.cpp  GenVisitor.h  PackageVisitor.cpp  PackageVisitor.h  StatVisitor.cpp  StatVisitor.h  StatVisitor.ixx  StmtVisitor.cpp  StmtVisitor.h
src/config/: config.go
src/ext/: doubleMap.cpp  doubleMap.h
src/ir/: Statements.py  builders.py  errors.py  ir_types.py  managers.py  statements.py
src/parser/: RiddleLexer.interp  RiddleLexer.py  RiddleLexer.tokens  RiddleParser.interp  RiddleParser.py  RiddleParser.tokens  RiddleParserListener.py  RiddleParserVisitor.py  riddle_lexer.go  riddle_parser.go  riddleparser_base_listener.go  riddleparser_base_visitor.go  riddleparser_listener.go  riddleparser_visitor.go
src/visitors/: generater.py
test/: code.red  main.bc  main.ll  main.red
